# vision

./: .coverage  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .rc_launch.ps1  ACCESSIBILITY_AND_VOICE_IMPROVEMENTS.md  ACCESSIBILITY_AND_VOICE_IMPROVEMENTS.md.backup  ACCESSIBILITY_FEATURES_COMPLETE_INTEGRATION.md  ACCESSIBILITY_INTEGRATION_SUMMARY.md  AGENTS.md  AGENT_WORKFLOW_GUIDE.md  AGI_ENHANCEMENTS.md  AVATAR_FIX_SUMMARY.md  AVATAR_INTEGRATION_REPORT.md  AVATAR_POSITION_FIX.md  AVATAR_STYLING_SUMMARY.md  Archon.code-workspace  BIRTHDAY_GIFT_GUIDE.md  CHANGELOG.md  CLAUDE.md  COMPLETE_SESSION_REPORT.md  CONTRIBUTING.md  COPILOT_MEMORY_UPDATE.md  DELIVERY_SUMMARY.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  Dockerfile  DxDiag.txt  ELEVENLABS_IMPLEMENTATION.md  ELITE_ENHANCEMENTS.md  EXTERNAL_KNOWLEDGE_INTEGRATION.md  FINAL_ACCESSIBILITY_INTEGRATION_REPORT.md  FINAL_VALIDATION_SUMMARY.txt  GETTING_STARTED_ELITE.md  GUI_TEST_REPORT.md  HIVE.md  HWMonitor.txt  (+235 more)
.Jules/: palette.md
.agents/skills/archon/: SKILL.md
.archon/: config.yaml
.archon/workflows/: vision-cognitive-council.yaml  vision-context-brain-refresh.yaml  vision-external-agent-integration.yaml  vision-repo-maintenance.yaml
.brain/: episodes.json  semantic.json
.claude/: settings.json
.foundry/: agent-metadata.yaml
.gemini/agents/: analysis.md  coding.md  debug.md  deploy.md  github.md  maintenance.md  performance.md  security.md  test.md  vision-specialist.md  voice.md
.github/: FUNDING.yml  copilot-conventions.md  copilot-instructions.md  copilot-task-admin-mode.md
.github/agents/: code-review.agent.md  coding-agent.agent.md  context-steward.agent.md  home-ops-steward.agent.md  mcp-builder.agent.md  openclaw-operator.agent.md  refactor.agent.md  ultron-azure-ai.agent.md  vision-maintainer.agent.md
.github/instructions/: README.md  SETUP_COMPLETE.md  external-knowledge.instructions.md  html-webui.instructions.md  mcp-server.instructions.md  powershell-scripts.instructions.md  python-backend.instructions.md  rag-system.instructions.md  secondary-workspaces.instructions.md  voice-overlay.instructions.md
.github/skills/mcp-recovery/: SKILL.md
.github/skills/openclaw-getting-started/: SKILL.md
.github/skills/ultron-azure-ai/: SKILL.md
.github/skills/vision-adb-control/: SKILL.md
.github/skills/vision-code-review/: SKILL.md
.github/skills/vision-cognitive-council/: SKILL.md
.github/skills/vision-context-brain/: SKILL.md
.github/skills/vision-context-ops/: SKILL.md
.github/skills/vision-debugging/: SKILL.md
.github/skills/vision-documentation-ops/: SKILL.md
.github/skills/vision-error-resolution/: SKILL.md
.github/skills/vision-git-ops/: SKILL.md
.github/skills/vision-home-ops/: SKILL.md
.github/skills/vision-mcp-builder/: SKILL.md
.github/skills/vision-mcp-tools/: SKILL.md
.github/skills/vision-multi-monitor/: SKILL.md
.github/skills/vision-operator/: SKILL.md
.github/skills/vision-performance/: SKILL.md
.github/skills/vision-runtime-ops/: SKILL.md
.github/skills/vision-tool-audit/: SKILL.md
.github/skills/vision-tool-dev/: SKILL.md
.github/skills/vision-type-safety/: SKILL.md
.github/skills/vision-web-research/: SKILL.md
.github/workflows/: main_vision.yml  quality.yml  semgrep.yml
.understand-anything/: .understandignore  meta.json
LANGGRAPH/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
LANGGRAPH/.github/workflows/: integration-tests.yml  unit-tests.yml
LANGGRAPH/src/agent/: api_catalog.py  graph.py  memory.py  openharness_bridge.py  owt_bridge.py  retrieval.py  telemetry.py
LANGGRAPH/tests/integration_tests/: test_graph.py
LANGGRAPH/tests/unit_tests/: test_configuration.py
Sound Recordings/: Recording (2).m4a  Recording (3).m4a  Recording.m4a
abc/: abc.sqlproj
agent_workflow/: .env.template  README.md  content_collaboration.py  requirements.txt  workflow.py
api/: index.py
configs/llm_data_modes/: aligned.json  research_eval.json
copilot-voice/: README.md  package-lock.json  package.json
copilot-voice/src/: extension.ts
data/curated/: summary_research_eval.json
data/curated/hf_snapshot/gpt & grok data/: group_chats.json  shared_conversations.json  user.json
data/curated/hf_snapshot/runs/01c15862-5485-43fc-b54e-28b3dff40841/: events.jsonl  replay.json  run.json
data/curated/hf_snapshot/runs/0585d4da-9d41-4965-b1ca-b413f81d0c95/: events.jsonl  replay.json  run.json
docs/: copilot-openclaw-setup.md  dependencies-and-tools.md  hybrid_orchestration_research.md  research_dataset_pipeline.md  tool_calling_research.md  voice_llm_research.md
hive_tools/: collect_api_keys.py  context_mapper.py  copilot_audit.py  health_report.py  latency_bench.py  research_dataset_pipeline.py  security_audit.py  snippet_generator.py  style_enforcer.py
open-harness/: .env.example  .openharness-policy.json  COPILOT_UPDATE.md  README.md  package-lock.json  package.json  start-all.ps1  tsconfig.json
open-harness/src/: agent.ts  file-session-store.ts  health.ts  policy.ts  preflight.ts  runtime.ts  subagent-demo.ts  telemetry.ts  vision-agent.ts
pathwaytoscripture/: backend_requirements.md  generate_html.py  index.html
scratch/: check_diffs.py  merge_and_verify.py
scripts/: check_doc_consistency.py  copilot-openclaw.ps1  invoke_azure_openai_chat.py  invoke_foundry_agent.py  load_elevenlabs_session.js
sql/: sql.sqlproj
(+71 files in other folders)
