[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-accessibility-operator"
version = "2026.4.1"
description = "Universal Accessibility Operator: Multi-provider AI with voice, vision, memory, and computer control"
authors = [
    { name = "DFox", email = "dev@dfox.io" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "websockets>=12",
    "httpx>=0.25",
    "numpy>=1.24",
    "scipy>=1.11",
    "openai>=2.30",
    "anthropic>=0.25",
    "ollama>=0.1",
    "elevenlabs>=2.42",
    "pyautogui>=0.9",
    "pytesseract>=0.3",
    "sounddevice>=0.4",
    "pillow>=10",
    "psutil>=5.9",
    "pynvml>=12.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "pyright>=1.1",
    "bandit>=1.7",
]

test = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--cov=elite_",
    "--cov=live_chat_app",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-fail-under=70",
]
markers = [
    "asyncio: async tests",
    "integration: integration tests (slow)",
    "slow: slow tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict = true

[[tool.mypy.overrides]]
module = [
    "pytesseract",
    "pyautogui",
    "sounddevice",
    "pynvml",
    "elevenlabs.*",
    "ollama",
    "anthropic",
]
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring (docstrings preferred but not required)
    "R0913",  # too-many-arguments (7+ is OK for complex functions)
    "R0914",  # too-many-locals (10+ is OK for complex business logic)
    "W0212",  # protected-access (private members need inspection)
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.similarities]
min-similarity-lines = 5
ignore-imports = true

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
py_version = "311"
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = [
    "B101",  # assert_used (tests use asserts)
    "B601",  # paramiko_calls (we don't use paramiko)
]

[tool.coverage.run]
source = ["elite_", "live_chat_app"]
omit = [
    "*/__main__.py",
    "*/tests/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]

[tool.ruff]
line-length    = 120
target-version = "py311"
indent-width   = 4

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "PIE",  # flake8-pie
    "RUF",  # Ruff-native rules
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line length — formatter handles this
    "B008",   # function call in default arg — FastAPI pattern
    "B006",   # mutable default arg — FastAPI/Pydantic pattern
    "SIM108", # ternary not always clearer
    "RUF012", # mutable class variable annotation
    "UP007",  # keep Optional[X] for clarity over X | None
]

[tool.ruff.lint.per-file-ignores]
"live_chat_app.py" = [
    "E402",  # module-level import not at top (optional deps)
    "F401",  # imported but unused (conditional imports)
    "B007",  # loop var unused — common in event loop patterns
    # exec/subprocess are intentional in the operator tools:
    "S102", "S603", "S604", "S607",
]
"test_*.py" = ["S101", "F841"]

[tool.ruff.lint.isort]
known-first-party = [
    "live_chat_app", "elite_metrics", "elite_resilience",
    "elite_patterns", "elite_tools", "elite_memory",
    "elite_safety", "elite_voice", "elite_api",
]

[tool.ruff.format]
quote-style               = "double"
indent-style              = "space"
line-ending               = "lf"
skip-magic-trailing-comma = false

# ── Pyright ───────────────────────────────────────────────────────────────────

[tool.pyright]
pythonVersion              = "3.11"
typeCheckingMode           = "basic"
reportMissingTypeStubs     = false
reportUnknownVariableType  = false
reportUnknownArgumentType  = false
reportUnknownMemberType    = false
reportMissingModuleSource  = false
reportOptionalMemberAccess = "warning"
reportAttributeAccessIssue = "warning"
reportReturnType           = "warning"
exclude                    = ["**/__pycache__", "**/.venv", "**/node_modules"]
